Overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,8 @@ html {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: scroll;
   text-align: center;
   font-family: 'Luckiest Guy', cursive;
 }
